--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -26,6 +26,6 @@ jobs:
     
     - name: Schedule job
       env:
-        jbsk: ${{ JSON_BIN_SECRET_KEY }}
-        bid: ${{ BUSINESS_BIN_ID }}
+        jbsk: ${{ secrets.JSON_BIN_SECRET_KEY }}
+        bid: ${{ secrets.BUSINESS_BIN_ID }}
       run: npm install -g pnpm && pnpm install --registry=https://registry.npm.taobao.org && pnpm run schedule
