--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -8,8 +8,8 @@ on:
   # https://crontab.guru/examples.html
   # UCT +8: 10.30 (+- 20min) am
   schedule:
-    # - cron: '30 2 * * *'
-    - cron: '*/2 * * * *'
+    - cron: '30 2 * * *'
+    # - cron: '*/2 * * * *'
 
 jobs:
   build-and-schedule:
