--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Keylenn/ho#readme",
   "dependencies": {
+    "axios": "^0.24.0",
     "cross-env": "^7.0.3",
     "moment": "^2.29.1"
   }
