--- a/packages/schedule/package.json
+++ b/packages/schedule/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "art-template": "^4.13.2",
+    "node-html-markdown": "^1.1.3",
     "nodemailer": "^6.7.2"
   }
 }
