--- a/.github/workflows/schedule-clife.yml
+++ b/.github/workflows/schedule-clife.yml
@@ -6,10 +6,11 @@ on:
     branches:
       - schedule
   # https://crontab.guru/examples.html
-  # UCT +8: 10.30 (+- 20min) am
+  # UCT +8: 8.40 (+- 20min) am
+  # UCT +8: 22.40 (+- 20min) pm
   schedule:
-    - cron: '30 2 * * *'
-    # - cron: '*/2 * * * *'
+    - cron: '40 0 * * *'
+    - cron: '40 14 * * *'
 
 jobs:
   build-and-schedule:
@@ -28,4 +29,4 @@ jobs:
       env:
         jbsk: ${{ secrets.JSON_BIN_SECRET_KEY }}
         bid: ${{ secrets.BUSINESS_BIN_ID }}
-      run: npm install -g pnpm && pnpm install --registry=https://registry.npm.taobao.org && pnpm run schedule
+      run: npm install -g pnpm && pnpm install --registry=https://registry.npm.taobao.org && pnpm run schedule:clife
